# gsdecon

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  Options_8hpp.html  Options_8hpp_source.html  Results_8hpp.html  Results_8hpp_source.html  annotated.html  blocked_8hpp.html  blocked_8hpp_source.html  classes.html  compute_8hpp.html  compute_8hpp_source.html  dir_0a0dba0a4f3a4eee8620696bbd959b7e.html  files.html  functions.html  functions_vars.html  gsdecon.tag  gsdecon_8hpp.html  gsdecon_8hpp_source.html  index.html  namespacegsdecon.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  structgsdecon_1_1Buffers-members.html  structgsdecon_1_1Buffers.html  structgsdecon_1_1Options-members.html  structgsdecon_1_1Options.html  structgsdecon_1_1Results-members.html  structgsdecon_1_1Results.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_6.js  all_8.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_a.js  classes_c.js  classes_d.js  files_1.js  files_2.js  files_6.js  files_b.js  files_d.js  files_e.js  functions_1.js  functions_2.js  functions_d.js  namespaces_0.js  namespaces_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  variables_0.js  variables_1.js  variables_4.js  variables_7.js  (+6 more)
include/gsdecon/: Options.hpp  Results.hpp  blocked.hpp  compute.hpp  gsdecon.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: compute.cpp
